tests/parser_cases/invalid/bad_string_literal.ob0
MODULE Main;
BEGIN
  WriteString("Hello)
END Main.
